# game_boy_emulator

./: .gitignore  CMakeLists.txt  meson.build  testrom.gb
include/: cartridge.hpp  emulator.hpp
include/cpu/: cpu.hpp  memory.hpp  registers.hpp
include/graphics/: graphics.hpp  oam.hpp  tiles.hpp  vram.hpp
src/: cartridge.cpp  emulator.cpp  main.cpp
src/cpu/: cpu.cpp  cpu.hpp  memory.cpp  memory.hpp  registers.cpp  registers.hpp
src/graphics/: graphics.cpp  oam.cpp  vram.cpp
